[package]
name = "layerzero-executor-blueprint-template"
version = "0.1.0"
edition = "2021"
description = "A Tangle Blueprint specifying a LayerZero Executor"
authors = ["Tangle <drew@tangle.tools>"]
license = "Unlicense"
homepage = "https://tangle.tools"
repository = "https://github.com/tangle-network/layerzero-executor-blueprint-template"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["tangle", "blueprint", "avs"]
rust-version = "1.81"

[dependencies]
tracing = "0.1"
async-trait = "0.1"
color-eyre = "0.6"
structopt = "0.3.26"
tokio = { version = "1.39", default-features = false, features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["parking_lot", "env-filter"] }
alloy-primitives = "0.7.2"
alloy-json-abi = "0.7.2"
alloy-sol-types = "0.7.2"
alloy-rpc-types = { version = "0.1" }
alloy-rpc-types-eth = { version = "0.1" }
alloy-provider = { version = "0.1", default-features = false, features = ["reqwest", "ws"] }
alloy-pubsub = { version = "0.1" }
alloy-signer = { version = "0.1" }
alloy-signer-local = { version = "0.1" }
alloy-network = { version = "0.1" }
alloy-contract = { version = "0.1" }
alloy-consensus = { version = "0.1" }
alloy-transport = { version = "0.1" }
alloy-transport-http = { version = "0.5" }

[dependencies.gadget-sdk]
version = "0.3.0"
default-features = false
features = ["std", "getrandom"]

[build-dependencies]
blueprint-metadata = "0.1.6"

[lib]
path = "src/lib.rs"

[[bin]]
name = "layerzero-executor-blueprint-template"
path = "src/main.rs"